# backend/infra/src/entities/issue_label.rs
@@ -1,14 +1,12 @@
 use sea_orm::entity::prelude::*;
 
 #[derive(Clone, Debug, PartialEq, DeriveEntityModel)]
-#[sea_orm(table_name = "labels")]
+#[sea_orm(table_name = "issue_labels")]
 pub struct Model {
     #[sea_orm(primary_key, auto_increment = false)]
-    pub id: Uuid,
-    pub project_id: Uuid,
-    pub name: String,
-    pub color: String,
-    pub created_at: DateTimeWithTimeZone,
+    pub issue_id: Uuid,
+    #[sea_orm(primary_key, auto_increment = false)]
+    pub label_id: Uuid,
 }
 
 #[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
