# backend/infra/src/entities/issue_link.rs
@@ -1,13 +1,13 @@
 use sea_orm::entity::prelude::*;
 
 #[derive(Clone, Debug, PartialEq, DeriveEntityModel)]
-#[sea_orm(table_name = "labels")]
+#[sea_orm(table_name = "issue_links")]
 pub struct Model {
     #[sea_orm(primary_key, auto_increment = false)]
     pub id: Uuid,
-    pub project_id: Uuid,
-    pub name: String,
-    pub color: String,
+    pub source_id: Uuid,
+    pub target_id: Uuid,
+    pub link_type: String,
     pub created_at: DateTimeWithTimeZone,
 }
 
